corrigindo build